--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,22 +1,22 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/blog.css' %}">
-	<title>My 1st Page!</title>
-</head>
-<body>
-	<div class="page-header">
-		<h1>My test blog</h1>
-	</div>
-	<div class='container'>
-		<div class="row">
-			<div class="col-md-8">
-				{% block content %}
-				{% endblock %}
+	<head>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/blog.css' %}">
+		<title>My 1st Page!</title>
+	</head>
+	<body>
+		<div class="page-header">
+			<h1><a href='/'>My test blog</a></h1>
+		</div>
+		<div class='content container'>
+			<div class="row">
+				<div class="col-md-8">
+					{% block content %}
+					{% endblock %}
+				</div>
 			</div>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
