--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,10 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-	{%  for i in posts %}	
+	{%  for post in posts %}	
 		<hr>
-		<p>Author: {{ i.author }}</p>
-		<a href="{% url 'post_details' pk=i.pk %}"><h3 class='title'>{{ i.title }}</h3></a>
-		<p>{{ i.text | linebreaksbr  }}</p>
+		<p>Author: {{ post.author }}</p>
+		<a href="{% url 'post_detail' pk=post.pk %}"><h3 class='title'>{{ post.title }}</h3></a>
+		<p>{{ post.text | linebreaksbr  }}</p>
 	{% endfor %}
 {% endblock %}
