--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,12 +9,20 @@
 		<title>My 1st Page!</title>
 	</head>
 	<body>
-		<div class="page-header">
-			{% if user.is_authenticated %}
-			<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-			{% endif %}
-			<h1><a href='/'>My test blog</a></h1>
+		<nav class="navbar page-header ">
+			<div class="container">
+			<div class="row">
+				<div class="col">
+					<a class="text-light" href="/"><h2>My test blog </h2></a>
+					{% if user.is_authenticated %}
+					<a href="{% url 'post_new' %}" class="btn btn-success ">
+				{% endif %}
+					Add</a>
+				</div>
+				
+			</div>
 		</div>
+		</nav>
 		<div class='content container'>
 			<div class="row">
 				<div class="col-md-8">
